Firt edit of files

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Association des Jeunes de Kakandé</a>
+        <a class="navbar-brand js-scroll-trigger logo-ajk" href="#page-top">Association des Jeunes de Kakandé</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -53,6 +53,9 @@
               <a class="nav-link js-scroll-trigger" href="#team">Partenaires</a>
             </li>
             <li class="nav-item">
+              <a href="#donation" class="nav-link js-scroll-trigger">Adhérer/Faire un don</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
@@ -64,15 +67,15 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To Our Studio!</div>
-          <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+          <div class="intro-lead-in">Après le verbe "aimer", "aider" est le plus beau - Bertha Von Suttnerbeau</div>
+          <div class="intro-heading text-uppercase">AJK</div>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Qui sommes-nous</a>
         </div>
       </div>
     </header>
 
-    <!-- Services -->
-    <section id="services">
+    <!-- L'association -->
+    <section id="services" class="association">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -81,6 +84,33 @@
           </div>
         </div>
         <div class="row text-center">
+          <div class="col-lg-12">
+            <p>
+              L’Association des jeunes de  est une association à but non lucratif créée par l’initiative de jeune français d’origine guinéene souhaitant contribuer
+              au développement du village de leurs parents. L’association compte plusieurs profils variés comme des développeurs informatique,
+              des commerciaux, graphistes, ressources humaines, éducateurs, etc. L’AJK a pour vocation de mener des projets humanitaires
+              dans des domaines de premières nécessités tels que la santé, l’éducation, mais aussi tout ce qui contribue au développement
+              durable de la région de Kakandé situé en Guinée.
+            </p>
+            <h3 class="section-subheading text-muted">Notre Histoire</h3>
+            <p>
+              L’association a vu le jour en septembre 2016. Elle est issue d’une volonté de contribuer au développement de la région de
+              Kakandé d’où sont originaire nos parents. Nous, qui sommes nés et ayant grandi en France, avons une approche et une attache
+              particulière à notre pays d’origine. Nous avons connu la Guinée à travers les rêves et espoirs de nos parents. Ils nous racontaient
+              souvent le rêve de voir une Afrique enfin développée et émancipée. Au fils des années, nous avons développé avec eux leurs
+              espérances pour le continent.
+            </p>
+            <p>
+              En prenant conscience que nous avions des compétences variées que nous pouvons apporter à la
+              population, c’est dans ce but, que nous nous sommes réunis. De par nos parcours, nous espérons faire en sorte d’apporter
+              un nouvel élan qu’ont initié nos parents dans le développement de Kakandé.
+            </p>
+            <p>
+              À travers notre association, nous souhaitons mettre
+              en place des actions conséquentes et durables qui favoriseront l’amélioration du quotidien des habitants de ces villages.
+            </p>
+            </p>
+          </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -92,7 +122,8 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+              
+<i class="fas fa-history"></i>
             </span>
             <h4 class="service-heading">Responsive Design</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -109,7 +140,7 @@
       </div>
     </section>
 
-    <!-- Portfolio Grid -->
+    <!-- Nos Activités -->
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
@@ -207,7 +238,7 @@
       </div>
     </section>
 
-    <!-- About -->
+    <!-- Le Projet -->
     <section id="about">
       <div class="container">
         <div class="row">
@@ -288,7 +319,7 @@
       </div>
     </section>
 
-    <!-- Team -->
+    <!-- Partenaire -->
     <section class="bg-light" id="team">
       <div class="container">
         <div class="row">
@@ -379,6 +410,19 @@
       </div>
     </section>
 
+    <section id="donation">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae dicta vel expedita ab nemo saepe eveniet at quos placeat provident sequi dolorum quis, similique quisquam quas deleniti totam dignissimos!</p>
+          </div>
+          <div class="col-lg-12">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus id modi deserunt dolor corporis cumque libero inventore aliquam accusamus? Vero aut expedita ratione vel voluptatum totam a exercitationem consectetur rem!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Clients -->
     <section class="py-5">
       <div class="container">
@@ -422,28 +466,28 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
+                    <input class="form-control" id="name" type="text" placeholder="Votre nom *" required data-validation-required-message="Veuillez entrez votre nom.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
+                    <input class="form-control" id="email" type="email" placeholder="Votre Email *" required data-validation-required-message="Veuillez entrez votre adresse mail.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
+                    <input class="form-control" id="phone" type="tel" placeholder="Votre téléphone *" required data-validation-required-message="Veuillez entrez votre numéro de téléphone.">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
+                    <textarea class="form-control" id="message" placeholder="Votre Message *" required data-validation-required-message="Veuillez entrez un message."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-lg-12 text-center">
                   <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Validez</button>
                 </div>
               </div>
             </form>
@@ -467,7 +511,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+<a href="https://www.facebook.com/AJK-Association-des-Jeunes-de-kakand%C3%A9-1890930947858951/" target="_blank">
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
