--- a/index.html
+++ b/index.html
@@ -134,21 +134,35 @@
                 <li>Maoudé GASSAMA : Secrétaire Générale</li>
               </ul>
             </div>
-            <div class="col-md-4 text-center">
-              <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-user-plus fa-stack-1x fa-inverse"></i>
-              </span>
-              <h4 class="service-heading">Les membres seconds</h4>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <div class="col-md-4">
+              <div class="text-center">
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fa fa-user-plus fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">Le Conseil d'administration</h4>
+              </div>
+              <ul class="text-muted">
+                <li>Les membres du bureau mais aussi</li>
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>
+              </ul>
             </div>
-            <div class="col-md-4 text-center">
-              <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-user-plus fa-stack-1x fa-inverse"></i>
-              </span>
-              <h4 class="service-heading">Les membres actifs</h4>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <div class="col-md-4">
+              <div class="text-center">
+                <span class="fa-stack fa-4x">
+                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fa fa-user-plus fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">Les membres adhérents</h4>
+              </div>
+              <ul class="text-muted">
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>
+                <li>lorem ipsum</li>
+              </ul>
             </div>
           </div>
           <div class="row">
@@ -180,97 +194,11 @@
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center">
+          <div class="col-lg-12 text-center mb2">
             <h2 class="section-heading text-uppercase">Nos actions</h2>
-            <h3 class="section-subheading text-muted">Chronologie des actions réalisés</h3>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12">
-            <ul class="timeline">
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Mai 2016</h4>
-                    <h4 class="subheading">Opérations Dons Alimentaires</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">
-                       Récolte de fonds; achat denrées alimentaires pour les populations démunies de Kakandé
-                    </p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/IMG_3283-carre.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Juillet 2016</h4>
-                    <h4 class="subheading">Evènement caritatif</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Tournois de foot – Barbecue</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Avril 2017</h4>
-                    <h4 class="subheading">Soirée de présentation</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Présentation générale de l’association et de ses projets</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/DSC09093-carre.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Juillet 2017</h4>
-                    <h4 class="subheading">Voyage en Guinée</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Voyage reportage et enquête en Guinée sur le Système de santé.</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/gala-1-carre.jpg" alt="">
-                </div>
-                <div class="timeline-panel">
-                  <div class="timeline-heading">
-                    <h4>Octobre 2017</h4>
-                    <h4 class="subheading">Soirée de présentation du Dispensaire</h4>
-                  </div>
-                  <div class="timeline-body">
-                    <p class="text-muted">Récolte de fonds</p>
-                  </div>
-                </div>
-              </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
-                  <h4>Notre
-                    <br>Aventure
-                    <br>continue !</h4>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="row mt2">
           <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
@@ -356,11 +284,100 @@
             </div>
           </div>
         </div>
+        <hr>
+        <div class="row mt2">
+          <div class="col-lg-12 text-center">
+            <h3 class="section-subheading text-muted">Chronologie des actions réalisées</h3>
+          </div>
+          <div class="col-lg-12">
+            <ul class="timeline">
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <span class="block bold date-title">Mai 2016</span>
+                    <h4 class="subheading">Opérations Dons Alimentaires</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">
+                      Récolte de fonds; achat denrées alimentaires pour les populations démunies de Kakandé
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/IMG_3283-carre.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <span class="block bold date-title">Juillet 2016</span>
+                    <h4 class="subheading">Evènement caritatif</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Tournois de foot – Barbecue</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <span class="block bold date-title">Avril 2017</span>
+                    <h4 class="subheading">Soirée de présentation</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Présentation générale de l’association et de ses projets</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/DSC09093-carre.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <span class="block bold date-title">Juillet 2017</span>
+                    <h4 class="subheading">Voyage en Guinée</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Voyage reportage et enquête en Guinée sur le Système de santé.</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/about/gala-1-carre.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <span class="block bold date-title">Octobre 2017</span>
+                    <h4 class="subheading">Soirée de présentation du Dispensaire</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Récolte de fonds</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <h4>Notre
+                    <br>Aventure
+                    <br>continue !</h4>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
     <!-- Le Projet -->
-    <section id="about">
+    <section id="about" class="project">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -594,7 +611,7 @@
         </div>
         <div class="row mt1">
           <div class="col-md-6">
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Adresse Postale</h3>
             <p><span class="bold">Association des Jeunes de Kakandé</span>
               <br>
               15 Passage du Poteau
@@ -605,14 +622,16 @@
             </p>
           </div>
           <div class="col-md-6">
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            <ul>
+            <h3 class="section-subheading text-muted">Suivez nous !</h3>
+            <ul class="listNone">
               <li>
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                  <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                </span>
-                <a href="mailto:contact@associationjeuneskakande.org">contact@associationjeuneskakande.org</a>
+                <a href="mailto:contact@associationjeuneskakande.org">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                  </span>
+                  contact@associationjeuneskakande.org
+                </a>
               </li>
               <li>
                 <span class="fa-stack fa-lg">
@@ -621,11 +640,13 @@
                 </span>
               </li>
               <li>
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-                <a href="https://www.facebook.com/AJK-Association-des-Jeunes-de-kakand%C3%A9-1890930947858951/" target="_blank">DEVENEZ FAN ! Suivez notre activité sur Facebook</a>
+                <a href="https://www.facebook.com/AJK-Association-des-Jeunes-de-kakand%C3%A9-1890930947858951/" target="_blank">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                  </span>
+                  DEVENEZ FAN ! Suivez notre activité sur Facebook
+                </a>
               </li>
             </ul>
           </div>
@@ -693,7 +714,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Fermer le projet</button>
+                    Fermer</button>
                 </div>
               </div>
             </div>
@@ -733,7 +754,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Fermer le projet</button>
+                    Fermer</button>
                 </div>
               </div>
             </div>
@@ -770,7 +791,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Fermer le projet</button>
+                    Fermer</button>
                 </div>
               </div>
             </div>
@@ -809,7 +830,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Fermer le projet</button>
+                    Fermer</button>
                 </div>
               </div>
             </div>
@@ -848,7 +869,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Fermer le projet</button>
+                    Fermer</button>
                 </div>
               </div>
             </div>
@@ -886,7 +907,7 @@
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
-                    Fermer le projet</button>
+                    Fermer</button>
                 </div>
               </div>
             </div>
