FIX second release

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
+    
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
 
@@ -70,9 +67,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in text-color_black">Après le verbe "aimer", "aider" est le plus beau !</div>
-          <div class="intro-heading text-uppercase text-color_black">Bertha Von Suttnerbeau</div>
-          <h1>Association des Jeunes de Kakandé</h1>
+          <blockquote class="intro-lead-in text-color_black">Après le verbe "aimer", "aider" est le plus beau !</blockquote>
+          <cite class="intro-heading text-uppercase text-color_black">- Bertha Von Suttnerbeau</cite>
+          <h1>ASSOCIATION DES JEUNES DE KAKANDÉ</h1>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Qui sommes-nous</a>
         </div>
       </div>
@@ -84,9 +81,6 @@
         <div class="row">
           <div class="col-lg-12">
             <h2 class="section-heading text-uppercase text-center">L'association AJK</h2>
-            <div class="txtCenter mb2-s1200">
-              <!-- <img class="responsive-img" src="/img/logos/logo-final-ajk.svg" alt="logo ajk"> -->
-            </div>
             <h3 class="section-subheading text-muted">Qui sommes nous ?</h3>
           </div>
             <div class="col-lg-12">
@@ -970,9 +964,9 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
+    <script src="js/jqBootstrapValidation.min.js"></script>
+    <script src="js/contact_me.min.js"></script>
+    
     <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
 
