sizing img for performance & edit css style

--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    
+
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123646088-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-123646088-1');
+    </script>
 
   </head>
 
@@ -67,9 +77,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <blockquote class="intro-lead-in text-color_black">Après le verbe "aimer", "aider" est le plus beau !</blockquote>
-          <cite class="intro-heading text-uppercase text-color_black">- Bertha Von Suttnerbeau</cite>
-          <h1>ASSOCIATION DES JEUNES DE KAKANDÉ</h1>
+          <h1 class="mt0">ASSOCIATION DES JEUNES DE KAKANDÉ</h1>
+          <blockquote class="intro-lead-in text-color_black">Après le verbe "aimer", "aider" est le plus beau&nbsp!</blockquote>
+          <cite class="intro-heading text-uppercase text-color_black block">- Bertha Von Suttnerbeau</cite>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Qui sommes-nous</a>
         </div>
       </div>
@@ -81,7 +91,7 @@
         <div class="row">
           <div class="col-lg-12">
             <h2 class="section-heading text-uppercase text-center">L'association AJK</h2>
-            <h3 class="section-subheading text-muted">Qui sommes nous ?</h3>
+            <h3 class="section-subheading text-muted">Qui sommes nous&nbsp;?</h3>
           </div>
             <div class="col-lg-12">
               <img class="left responsive-img" src="/img/logos/logo-final-ajk.svg" alt="logo ajk">
@@ -426,18 +436,18 @@
             </div>
           </div>
           <div class="col-lg-12">
-            <h4 class="bold">Kakandé</h4>
+            <h4 class="service-heading">Kakandé</h4>
               <p>Elle regroupe 16 districts (plus précisément un ensemble de villages qui compte entre 3000 et 9000 habitants). Dabankou est
               l’un de ces villages et compte environ 7000 habitants. Il représente le carrefour économique entre tous les petits villages
               qui l’entoure.</p>
           </div>
           <div class="col-lg-12">
-            <h4 class="bold">Dabankou</h4>
+            <h4 class="service-heading">Dabankou</h4>
             <div class="text-center mb2">
               <span class="block bold italic mt1">Carte du village de Dabankou vue du ciel</span>
             </div>
             <p>
-              <img class="left responsive-map-img roundbox shadow" src="img/project/dabankou-map.png" alt="dabankou-map">
+              <img class="left-s768 responsive-map-img mr1-s768 roundbox shadow" src="img/project/dabankou-map.png" alt="dabankou-map">
               Les habitants du village manquent de moyen ; ils sont généralement agriculteurs et cultivent arachides, piments, aubergines,
               gombo et huile de palme. Les terres sont très fertiles mais les habitants ont malheureusement du mal à vivre pleinement de
               leurs activités. L’utilisation d’outils traditionnels ne permet pas de faire de grand rendement.<br />
@@ -556,9 +566,7 @@
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                   </span>
-                  <span class="">
-                    contact@associationjeuneskakande.org
-                  </span>
+                  contact@associationjeuneskakande.org
                 </a>
               </li>
               <li>
@@ -567,7 +575,7 @@
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                   </span>
-                  DEVENEZ FAN ! Suivez notre activité sur Facebook
+                  Suivez notre activité sur Facebook&nbsp;!
                 </a>
               </li>
             </ul>
