[AJK-004] - fix: alt wording for image & forget h4 end tag

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <i class="fa fa-circle fa-stack-2x text-primary"></i>
                   <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">L'Équipe Projet<h4>
+                <h4 class="service-heading">L'Équipe Projet</h4>
               </div>
               <ul class="text-muted listNone">
                 <li><span class="bold">Résponsable projet</span> : Fatoumata DIABY, Présidente</li>
@@ -535,12 +535,12 @@
             a débutée par le pôle pharmacie, qui a également servi de chantier école.</p>
             <span class="block bold italic mt1 text-center hide-s992">(Vous pouvez slider les images vers la droite ou la gauche)</span>
             <div class="slider-nav mt2">
-              <img src="img/new-dispensaire/dispensaire-kakande-ajk-1.jpg" alt="">
-              <img src="img/new-dispensaire/dispensaire-kakande-ajk-2.jpg" alt="">
-              <img src="img/new-dispensaire/dispensaire-kakande-ajk-3.jpg" alt="">
-              <img src="img/new-dispensaire/dispensaire-kakande-ajk-4.JPG" alt="">
-              <img src="img/new-dispensaire/dispensaire-kakande-ajk-5.JPG" alt="">
-              <img src="img/new-dispensaire/dispensaire-kakande-ajk-6.JPG" alt="">
+              <img src="img/new-dispensaire/dispensaire-kakande-ajk-1.jpg" alt="nouveau dispensaire ajk 1">
+              <img src="img/new-dispensaire/dispensaire-kakande-ajk-2.jpg" alt="nouveau dispensaire ajk 2">
+              <img src="img/new-dispensaire/dispensaire-kakande-ajk-3.jpg" alt="nouveau dispensaire ajk 3">
+              <img src="img/new-dispensaire/dispensaire-kakande-ajk-4.JPG" alt="nouveau dispensaire ajk 4">
+              <img src="img/new-dispensaire/dispensaire-kakande-ajk-5.JPG" alt="nouveau dispensaire ajk 5">
+              <img src="img/new-dispensaire/dispensaire-kakande-ajk-6.JPG" alt="nouveau dispensaire ajk 6">
             </div>
           </div>
         </div>
