[AJK-FIX] - fix: forget lazyloading link script

--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
 
     <!-- Lazy Loading -->
     <script src="js/jquery.lazy.min.js"></script>
-    <script src="js/lazy-loading.js"></script>
+    <script src="js/lazy-loading.min.js"></script>
   </body>
 
 </html>
