[AJK-005] feat: add new work section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
                   est le Directeur.
                 </p>
               </div>
+              <div class="partenary-section">
+                <h4>Les  habitants du village de Dabankou</h4>
+                <p>Les parents des jeunes de la diaspora se sont également investis dans le projet en se portant à notre disposition pour
+                toutes les informations requises sur le village et son fonctionnement.</p>
+              </div>
             </div>
           </div>
       </div>
@@ -300,6 +305,20 @@
               <p class="text-muted">Construction du futur poste de santé</p>
             </div>
           </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid lazy" data-src="img/portfolio/travaux-ajk-generaliste-thumbnail.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Démarrage de la construction du pôle généraliste</h4>
+              <p class="text-muted">Pôle généraliste</p>
+            </div>
+          </div>
         </div>
         <hr>
         <div class="row mt2">
@@ -390,7 +409,22 @@
                     <h4 class="subheading">Lancement de la construction</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Construction du futur poste de santé</p>
+                    <p class="text-muted">Construction du futur poste de santé<br />
+                    Pôle Pharmacie</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image">
+                  <img class="rounded-circle img-fluid lazy" data-src="img/about/travaux-ajk-2.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <span class="block bold date-title">Janvier 2019</span>
+                    <h4 class="subheading">Démarrage de la construction du pôle généraliste</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Pôle Généraliste</p>
                   </div>
                 </div>
               </li>
@@ -507,6 +541,14 @@
               à différentes échelles.
               <br />
               <br />
+              Les pôles sont:
+              <ul>
+                <li>Pôle Pharmacie</li>
+                <li>Pôle Généraliste</li>
+                <li>Pôle Maternité</li>
+                <li>Pôle Spécialiste</li>
+              </ul>
+              <br />
                Ces bâtiments ont été conçus en plain-pied (RDC) afin de faciliter la circulation des usagers. Ces architectures sont surélevées
               par un socle en béton de 64cm afin d'éviter la remontée d'humidité par capillarité. Toutefois, des rampes et des escaliers
               sont imaginés pour faciliter l'accès à tout type d'usager. Ce socle revêt ainsi la fonction de cloître, distribuant les différents
@@ -532,14 +574,43 @@
             <h3 class="section-subheading text-muted">Début des travaux de construction</h3>
             <p>Grace aux dons récoltés lors de notre diner de charité du 7 Octobre 2017, nous avons pu entamer les travaux. La construction
             a débutée par le pôle pharmacie, qui a également servi de chantier école.</p>
-            <span class="block bold italic mt1 text-center hide-s992">(Vous pouvez slider les images vers la droite ou la gauche)</span>
-            <div class="slider-nav mt2">
-              <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-1.jpg" alt="nouveau dispensaire ajk 1">
-              <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-2.jpg" alt="nouveau dispensaire ajk 2">
-              <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-3.jpg" alt="nouveau dispensaire ajk 3">
-              <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-4.JPG" alt="nouveau dispensaire ajk 4">
-              <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-5.JPG" alt="nouveau dispensaire ajk 5">
-              <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-6.JPG" alt="nouveau dispensaire ajk 6">
+            <div class="mt2">
+              <h4 class="service-heading">Pôle Pharmacie</h4>
+              <p>Le chantier école à débuter avec le recrutement des jeunes et de travailleurs qualifiés car étant la partie la plus
+              importante du projet, elle est consacrée à la formation des jeunes bénévoles et à de nouvelles méthodes de construction
+              formant la particularité de notre projet. Les fondations, les murs, la charpente et le toit ont été mis en place pour
+              cette première phase de construction du pôle pharmacie.</p>
+              <span class="block bold italic mt1 text-center hide-s992">(Vous pouvez slider les images vers la droite ou la gauche)</span>
+              <div class="slider-nav mt2">
+                <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-1.jpg" alt="nouveau dispensaire ajk 1">
+                <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-2.jpg" alt="nouveau dispensaire ajk 2">
+                <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-3.jpg" alt="nouveau dispensaire ajk 3">
+                <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-4.JPG" alt="nouveau dispensaire ajk 4">
+                <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-5.JPG" alt="nouveau dispensaire ajk 5">
+                <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-6.JPG" alt="nouveau dispensaire ajk 6">
+              </div>
+              <div class="mt2">
+                <h4 class="service-heading">Pôle Généraliste</h4>
+                <p>La seconde étape est enclenchée ! Fort de cette première expérience, nous avons démarré la construction du pôle
+                généraliste du futur centre de santé. C'est avec entrain que les ouvriers et les jeunes des villages ont pu mettre en
+                pratique la formation aux différentes techniques de construction acquises lors du chantier école.</p>
+                <span class="block bold italic mt1 text-center hide-s992">(Vous pouvez slider les images vers la droite ou la
+                  gauche)</span>
+                <div class="slider-nav mt2">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-8.JPG" alt="nouveau dispensaire ajk 8">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-9.JPG" alt="nouveau dispensaire ajk 9">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-10.JPG" alt="nouveau dispensaire ajk 10">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-11.JPG" alt="nouveau dispensaire ajk 11">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-12.JPG" alt="nouveau dispensaire ajk 12">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-13.JPG" alt="nouveau dispensaire ajk 13">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-14.JPG" alt="nouveau dispensaire ajk 14">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-15.JPG" alt="nouveau dispensaire ajk 15">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-16.JPG" alt="nouveau dispensaire ajk 16">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-17.JPG" alt="nouveau dispensaire ajk 17">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-18.JPG" alt="nouveau dispensaire ajk 18">
+                  <img data-lazy="img/new-dispensaire/dispensaire-kakande-ajk-19.JPG" alt="nouveau dispensaire ajk 19">
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -547,12 +618,23 @@
     </section>
 
     <!-- Partenaire -->
-    <section class="bg-light" id="team">
+    <section class="bg-light medias" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Médias</h2>
             <h3 class="section-subheading text-muted">Presse, Vidéo, Réseaux Sociaux</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <div class="video-container">
+              <iframe width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/_CvjKNGdqBI"
+                      frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen></iframe>
+            </div>
           </div>
         </div>
         <div class="row">
@@ -709,7 +791,7 @@
       <div class="container">
         <div class="row text-color_white">
           <div class="col-md-4">
-            <span class="copyright">Copyright 2018 &copy; AJK - Tous droits réservés</span>
+            <span class="copyright">Copyright 2019 &copy; AJK - Tous droits réservés</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
@@ -798,6 +880,7 @@
                   <ul class="list-inline">
                     <li>Date : Juillet 2016</li>
                     <li>Juillet 2017</li>
+                    <li>Juillet 2018</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -951,6 +1034,41 @@
                   qui a servi de chantier école.</p>
                   <ul class="list-inline">
                     <li>Date: Février 2018</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fa fa-times"></i>
+                    Fermer</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 7 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">Démarrage des travaux du pôle généraliste</h2>
+                  <p class="item-intro text-muted">Pôle Généraliste</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/travaux-ajk-generaliste-full.jpg" alt="">
+                  <p>La seconde étape est enclenchée ! Fort de cette première expérience, nous avons démarré la construction du pôle
+                  généraliste du futur centre de santé. C'est avec entrain que les ouvriers et les jeunes des villages ont pu mettre en
+                  pratique la formation aux différentes techniques de construction acquises lors du chantier école.</p>
+                  <ul class="list-inline">
+                    <li>Date: Janvier 2019</li>
+                    <li>Travaux en cours</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
