feat: init webpack build js

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 </head>
 <body>
-  
+  <div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quia alias in, similique a quidem voluptate natus voluptatem delectus odio fugiat autem dignissimos dolor aperiam animi eveniet laborum. Odio, praesentium!</p>
+  </div>
+  <script src="dist/index.js"></script>
 </body>
 </html>
