--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quia alias in, similique a quidem voluptate natus voluptatem delectus odio fugiat autem dignissimos dolor aperiam animi eveniet laborum. Odio, praesentium!</p>
   </div>
-  <script src="dist/index.js"></script>
+  <script src="dist/js/vendor.js"></script>
+  <script src="dist/js/app.js"></script>
 </body>
 </html>
